<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lab4Activity2">

    <!-- Label pentru Nume Bancă -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="33dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bankName"
        app:layout_constraintEnd_toStartOf="@+id/etNumeBanca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- EditText pentru Nume Bancă -->
    <EditText
        android:id="@+id/etNumeBanca"
        android:layout_width="206dp"
        android:layout_height="33dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/introduceName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Label pentru Număr Filiale -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/bankSub"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/etFiliale"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-- EditText pentru Număr Filiale -->
    <EditText
        android:id="@+id/etFiliale"
        android:layout_width="206dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/introduceSub"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeBanca" />

    <!-- Spinner pentru Tip Bancă -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="352dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCredits" />

    <!-- RadioGroup pentru Internet Banking -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFiliale">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/hasIntBank" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/doesNotHaveIntBank" />
    </RadioGroup>

    <!-- LinearLayout pentru CheckBox-uri (Tipuri de Credite) -->
    <LinearLayout
        android:id="@+id/linearLayoutCredits"
        android:layout_width="323dp"
        android:layout_height="143dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditI" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditA" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creditP" />
    </LinearLayout>

    <!-- Buton pentru trimitere -->
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lab4Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:numStars="5"
        android:stepSize="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
